[gd_scene load_steps=10 format=3 uid="uid://crt4qogr5u6ow"]

[ext_resource type="Script" path="res://effects/energy_shield.gd" id="1_1egbr"]
[ext_resource type="Texture2D" uid="uid://ch5nydnyq2rle" path="res://effects/WhiteDomedShieldFull.png" id="2_hdleq"]
[ext_resource type="Script" path="res://effects/texture_progress_bar.gd" id="4_7ig7m"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0mruu"]
radius = 14.0

[sub_resource type="Animation" id="Animation_fpsth"]
resource_name = "1"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 13, 14, 16]
}

[sub_resource type="Animation" id="Animation_2bclm"]
resource_name = "2"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [52, 53, 54, 55, 56, 58]
}

[sub_resource type="Animation" id="Animation_dm5i7"]
resource_name = "3"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [173, 174, 175, 176, 177, 178]
}

[sub_resource type="Animation" id="Animation_msgme"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o4qh6"]
_data = {
"1": SubResource("Animation_fpsth"),
"2": SubResource("Animation_2bclm"),
"3": SubResource("Animation_dm5i7"),
"RESET": SubResource("Animation_msgme")
}

[node name="EnergyShield" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_1egbr")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_hdleq")
hframes = 26
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0mruu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o4qh6")
}

[node name="RecoverTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = 16.0
offset_right = 1597.0
offset_bottom = 236.0
scale = Vector2(0.01, 0.01)
value = 100.0
show_percentage = false
script = ExtResource("4_7ig7m")

[connection signal="max_sp_changed" from="." to="ProgressBar" method="_on_energy_shield_max_sp_changed"]
[connection signal="recovering_speed_changed" from="." to="ProgressBar" method="_on_energy_shield_recovering_speed_changed"]
[connection signal="sp_changed" from="." to="ProgressBar" method="_on_energy_shield_sp_changed"]
[connection signal="timeout" from="RecoverTimer" to="." method="_on_recover_timer_timeout"]
